Added Connection String  "ConnectionStrings": {    "DefaultConnection": "Server=.;Database=BogchaAppDemoDb;Trusted_Connection = True"

--- a/Bogcha.API/appsettings.json
+++ b/Bogcha.API/appsettings.json
@@ -3,8 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
-    
-  },
-  "AllowedHosts": "*"
-}
+    },
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=.;Database=BogchaAppDemoDb;Trusted_Connection = True"
+    },
+    "AllowedHosts": "*"
+  }
