--- a/Bogcha.DataAccess/Bogcha.DataAccess.csproj
+++ b/Bogcha.DataAccess/Bogcha.DataAccess.csproj
@@ -11,8 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Repository\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
