--- a/Bogcha.DataAccess/Bogcha.DataAccess.csproj
+++ b/Bogcha.DataAccess/Bogcha.DataAccess.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.15" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bogcha.Domain\Bogcha.Domain.csproj" />
   </ItemGroup>
 
 </Project>
