--- a/Bogcha.DataAccess/Bogcha.DataAccess.csproj
+++ b/Bogcha.DataAccess/Bogcha.DataAccess.csproj
@@ -17,7 +17,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.15" />
-    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bogcha.Domain\Bogcha.Domain.csproj" />
   </ItemGroup>
 
 </Project>
