--- a/Bogcha.API/appsettings.json
+++ b/Bogcha.API/appsettings.json
@@ -3,9 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=.;Database=BogchaAppDemoDb;Trusted_Connection = True"
-    },
-    "AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=PreschoolDB;Trusted_Connection = True"
   }
+}
