--- a/Bogcha.API/Bogcha.API.csproj
+++ b/Bogcha.API/Bogcha.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>dce18803-a0be-4111-a517-e1e23a48255d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +13,10 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bogcha.DataAccess\Bogcha.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
