Repositorylar qo'shdim

--- a/Bogcha.DataAccess/Bogcha.DataAccess.csproj
+++ b/Bogcha.DataAccess/Bogcha.DataAccess.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Repository\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bogcha.Domain\Bogcha.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
