--- a/Bogcha.API/Bogcha.API.csproj
+++ b/Bogcha.API/Bogcha.API.csproj
@@ -16,7 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Bogcha.DataAccess\Bogcha.DataAccess.csproj" />
     <ProjectReference Include="..\Bogcha.Domain\Bogcha.Domain.csproj" />
-    <ProjectReference Include="..\Bogcha.Services\Bogcha.Services.csproj" />
+    <ProjectReference Include="..\Bogcha.Services\Bogcha.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
