changed connection strings

--- a/Bogcha.API/appsettings.json
+++ b/Bogcha.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PreschoolDB;Trusted_Connection = True;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=yangiyangi;Trusted_Connection = True;TrustServerCertificate=true;"
   }
 }
